--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
-Django==1.8.6
+Django==1.8.4
+Pillow==3.0.0
 argparse==1.2.1
+boto==2.38.0
+botocore==1.3.5
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-bootstrap3==6.2.2
 django-registration-redux==1.2
+django-storages==1.1.8
 django-toolbelt==0.0.1
-gunicorn==19.4.1
+docutils==0.12
+futures==2.2.0
+gunicorn==19.3.0
+jmespath==0.9.0
 psycopg2==2.6.1
+python-dateutil==2.4.2
+six==1.10.0
 static3==0.6.1
 wsgiref==0.1.2
