--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
-Django==1.8.4
-Pillow==3.0.0
-argparse==1.2.1
-boto==2.38.0
-botocore==1.3.5
-dj-database-url==0.3.0
-dj-static==0.0.6
-django-bootstrap3==6.2.2
-django-registration-redux==1.2
-django-storages==1.1.8
-django-toolbelt==0.0.1
-docutils==0.12
-futures==2.2.0
-gunicorn==19.3.0
-jmespath==0.9.0
-psycopg2==2.6.1
-python-dateutil==2.4.2
-six==1.10.0
-static3==0.6.1
-wsgiref==0.1.2
+Downloading/unpacking freeze
+  Downloading freeze-1.0.9.tar.gz
+  Running setup.py (path:/home/nitrous/.virtualenvs/club_lax/build/freeze/setup.py) egg_info for package freeze
+    Installing with cython
+    
+    Installing without cython
+    
+    
+Downloading/unpacking six (from freeze)
+  Downloading six-1.10.0-py2.py3-none-any.whl
+Installing collected packages: freeze, six
+  Running setup.py install for freeze
+    Installing with cython
+    
+    Installing without cython
+    
+    
+Successfully installed freeze six
+Cleaning up...
